ZIL - bybit htx
