# swagger_server/models/configure_trade_request.py
@@ -1,179 +1,235 @@
 # coding: utf-8
 
 from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
+from typing import Dict
 from swagger_server.models.base_model_ import Model
 from swagger_server.models.exchange_request import ExchangeRequest
 from swagger_server import util
 
 
+# -------------------------
+# Nested Models
+# -------------------------
+
+class TradeFeeConfig(Model):
+
+    def __init__(self, fee_taker: float = None, min_notional: float = None):
+        self.swagger_types = {
+            'fee_taker': float,
+            'min_notional': float
+        }
+
+        self.attribute_map = {
+            'fee_taker': 'fee_taker',
+            'min_notional': 'min_notional'
+        }
+
+        self._fee_taker = fee_taker
+        self._min_notional = min_notional
+
+    @property
+    def fee_taker(self):
+        return self._fee_taker
+
+    @fee_taker.setter
+    def fee_taker(self, value):
+        self._fee_taker = value
+
+    @property
+    def min_notional(self):
+        return self._min_notional
+
+    @min_notional.setter
+    def min_notional(self, value):
+        self._min_notional = value
+
+
+class TelegramBotConfig(Model):
+
+    def __init__(
+        self,
+        bot_token: str = None,
+        chat_id: str = None,
+        chat_topic: int = None,
+        warning_topic: int = None,
+        error_topic: int = None,
+    ):
+        self.swagger_types = {
+            'bot_token': str,
+            'chat_id': str,
+            'chat_topic': int,
+            'warning_topic': int,
+            'error_topic': int,
+        }
+
+        self.attribute_map = {
+            'bot_token': 'bot_token',
+            'chat_id': 'chat_id',
+            'chat_topic': 'chat_topic',
+            'warning_topic': 'warning_topic',
+            'error_topic': 'error_topic',
+        }
+
+        self._bot_token = bot_token
+        self._chat_id = chat_id
+        self._chat_topic = chat_topic
+        self._warning_topic = warning_topic
+        self._error_topic = error_topic
+
+    @property
+    def bot_token(self):
+        return self._bot_token
+
+    @bot_token.setter
+    def bot_token(self, value):
+        self._bot_token = value
+
+    @property
+    def chat_id(self):
+        return self._chat_id
+
+    @chat_id.setter
+    def chat_id(self, value):
+        self._chat_id = value
+
+    @property
+    def chat_topic(self):
+        return self._chat_topic
+
+    @chat_topic.setter
+    def chat_topic(self, value):
+        self._chat_topic = value
+
+    @property
+    def warning_topic(self):
+        return self._warning_topic
+
+    @warning_topic.setter
+    def warning_topic(self, value):
+        self._warning_topic = value
+
+    @property
+    def error_topic(self):
+        return self._error_topic
+
+    @error_topic.setter
+    def error_topic(self, value):
+        self._error_topic = value
+
+
+# -------------------------
+# Main Model
+# -------------------------
+
 class ConfigureTradeRequest(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
 
-    Do not edit the class manually.
-    """
+    def __init__(
+        self,
+        coin: str = None,
+        primary_exchange: ExchangeRequest = None,
+        secondary_exchange: ExchangeRequest = None,
+        arbitrage_threshold: float = None,
+        max_trade_quantity: float = None,
+        primary_trade: TradeFeeConfig = None,
+        secondary_trade: TradeFeeConfig = None,
+        telegram_config: TelegramBotConfig = None,
+    ):
 
-    def __init__(self, coin: str=None, primary_exchange: ExchangeRequest=None, secondary_exchange: ExchangeRequest=None, limit: int=None, simulated: int=None):  # noqa: E501
-        """ConfigureTradeRequest - a model defined in Swagger
-
-        :param coin: The coin of this ConfigureTradeRequest.  # noqa: E501
-        :type coin: str
-        :param primary_exchange: The primary_exchange of this ConfigureTradeRequest.  # noqa: E501
-        :type primary_exchange: ExchangeRequest
-        :param secondary_exchange: The secondary_exchange of this ConfigureTradeRequest.  # noqa: E501
-        :type secondary_exchange: ExchangeRequest
-        :param limit: The limit of this ConfigureTradeRequest.  # noqa: E501
-        :type limit: int
-        :param simulated: The simulated of this ConfigureTradeRequest.  # noqa: E501
-        :type simulated: int
-        """
         self.swagger_types = {
             'coin': str,
             'primary_exchange': ExchangeRequest,
             'secondary_exchange': ExchangeRequest,
-            'limit': int,
-            'simulated': int
+            'arbitrage_threshold': float,
+            'max_trade_quantity': float,
+            'primary_trade': TradeFeeConfig,
+            'secondary_trade': TradeFeeConfig,
+            'telegram_config': TelegramBotConfig,
         }
 
         self.attribute_map = {
             'coin': 'coin',
             'primary_exchange': 'primary_exchange',
             'secondary_exchange': 'secondary_exchange',
-            'limit': 'limit',
-            'simulated': 'simulated'
+            'arbitrage_threshold': 'arbitrage_threshold',
+            'max_trade_quantity': 'max_trade_quantity',
+            'primary_trade': 'primary_trade',
+            'secondary_trade': 'secondary_trade',
+            'telegram_config': 'telegram_config',
         }
 
         self._coin = coin
         self._primary_exchange = primary_exchange
         self._secondary_exchange = secondary_exchange
-        self._limit = limit
-        self._simulated = simulated
+        self._arbitrage_threshold = arbitrage_threshold
+        self._max_trade_quantity = max_trade_quantity
+        self._primary_trade = primary_trade
+        self._secondary_trade = secondary_trade
+        self._telegram_config = telegram_config
 
     @classmethod
     def from_dict(cls, dikt) -> 'ConfigureTradeRequest':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The ConfigureTradeRequest of this ConfigureTradeRequest.  # noqa: E501
-        :rtype: ConfigureTradeRequest
-        """
         return util.deserialize_model(dikt, cls)
 
     @property
-    def coin(self) -> str:
-        """Gets the coin of this ConfigureTradeRequest.
-
-        coin trade  # noqa: E501
-
-        :return: The coin of this ConfigureTradeRequest.
-        :rtype: str
-        """
+    def coin(self):
         return self._coin
 
     @coin.setter
-    def coin(self, coin: str):
-        """Sets the coin of this ConfigureTradeRequest.
-
-        coin trade  # noqa: E501
-
-        :param coin: The coin of this ConfigureTradeRequest.
-        :type coin: str
-        """
-
-        self._coin = coin
+    def coin(self, value):
+        self._coin = value
 
     @property
-    def primary_exchange(self) -> ExchangeRequest:
-        """Gets the primary_exchange of this ConfigureTradeRequest.
-
-        Exchange primary  # noqa: E501
-
-        :return: The primary_exchange of this ConfigureTradeRequest.
-        :rtype: ExchangeRequest
-        """
+    def primary_exchange(self):
         return self._primary_exchange
 
     @primary_exchange.setter
-    def primary_exchange(self, primary_exchange: ExchangeRequest):
-        """Sets the primary_exchange of this ConfigureTradeRequest.
-
-        Exchange primary  # noqa: E501
-
-        :param primary_exchange: The primary_exchange of this ConfigureTradeRequest.
-        :type primary_exchange: ExchangeRequest
-        """
-
-        self._primary_exchange = primary_exchange
+    def primary_exchange(self, value):
+        self._primary_exchange = value
 
     @property
-    def secondary_exchange(self) -> ExchangeRequest:
-        """Gets the secondary_exchange of this ConfigureTradeRequest.
-
-        Exchange secondary  # noqa: E501
-
-        :return: The secondary_exchange of this ConfigureTradeRequest.
-        :rtype: ExchangeRequest
-        """
+    def secondary_exchange(self):
         return self._secondary_exchange
 
     @secondary_exchange.setter
-    def secondary_exchange(self, secondary_exchange: ExchangeRequest):
-        """Sets the secondary_exchange of this ConfigureTradeRequest.
-
-        Exchange secondary  # noqa: E501
-
-        :param secondary_exchange: The secondary_exchange of this ConfigureTradeRequest.
-        :type secondary_exchange: ExchangeRequest
-        """
-
-        self._secondary_exchange = secondary_exchange
+    def secondary_exchange(self, value):
+        self._secondary_exchange = value
 
     @property
-    def limit(self) -> int:
-        """Gets the limit of this ConfigureTradeRequest.
+    def arbitrage_threshold(self):
+        return self._arbitrage_threshold
 
-        Litmit  # noqa: E501
-
-        :return: The limit of this ConfigureTradeRequest.
-        :rtype: int
-        """
-        return self._limit
-
-    @limit.setter
-    def limit(self, limit: int):
-        """Sets the limit of this ConfigureTradeRequest.
-
-        Litmit  # noqa: E501
-
-        :param limit: The limit of this ConfigureTradeRequest.
-        :type limit: int
-        """
-
-        self._limit = limit
+    @arbitrage_threshold.setter
+    def arbitrage_threshold(self, value):
+        self._arbitrage_threshold = value
 
     @property
-    def simulated(self) -> int:
-        """Gets the simulated of this ConfigureTradeRequest.
+    def max_trade_quantity(self):
+        return self._max_trade_quantity
 
-        simulated  # noqa: E501
+    @max_trade_quantity.setter
+    def max_trade_quantity(self, value):
+        self._max_trade_quantity = value
 
-        :return: The simulated of this ConfigureTradeRequest.
-        :rtype: int
-        """
-        return self._simulated
+    @property
+    def primary_trade(self):
+        return self._primary_trade
 
-    @simulated.setter
-    def simulated(self, simulated: int):
-        """Sets the simulated of this ConfigureTradeRequest.
+    @primary_trade.setter
+    def primary_trade(self, value):
+        self._primary_trade = value
 
-        simulated  # noqa: E501
+    @property
+    def secondary_trade(self):
+        return self._secondary_trade
 
-        :param simulated: The simulated of this ConfigureTradeRequest.
-        :type simulated: int
-        """
+    @secondary_trade.setter
+    def secondary_trade(self, value):
+        self._secondary_trade = value
 
-        self._simulated = simulated
+    @property
+    def telegram_config(self):
+        return self._telegram_config
+
+    @telegram_config.setter
+    def telegram_config(self, value):
+        self._telegram_config = value
