# swagger_server/models/rebalance_config_request.py
@@ -5,11 +5,49 @@ from swagger_server.models.base_model_ import Model
 from swagger_server import util
 
 
-class RebalanceConfigRequest(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
+# ---------------------------------
+# Nested Model
+# ---------------------------------
 
-    Do not edit the class manually.
-    """
+class RebalanceSide(Model):
+
+    def __init__(
+        self,
+        coin_address: str = None,
+        usdt_address: str = None,
+        coin_network: str = None,
+        usdt_network: str = None
+    ):
+
+        self.swagger_types = {
+            'coin_address': str,
+            'usdt_address': str,
+            'coin_network': str,
+            'usdt_network': str,
+        }
+
+        self.attribute_map = {
+            'coin_address': 'coin_address',
+            'usdt_address': 'usdt_address',
+            'coin_network': 'coin_network',
+            'usdt_network': 'usdt_network',
+        }
+
+        self._coin_address = coin_address
+        self._usdt_address = usdt_address
+        self._coin_network = coin_network
+        self._usdt_network = usdt_network
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'RebalanceSide':
+        return util.deserialize_model(dikt, cls)
+
+
+# ---------------------------------
+# Main Model
+# ---------------------------------
+
+class RebalanceConfigRequest(Model):
 
     def __init__(
         self,
@@ -17,21 +55,11 @@ class RebalanceConfigRequest(Model):
         usdt_ratio: float = None,
         coin_ratio: float = None,
         usdt_threshold: float = None,
-        coin_threshold: float = None
-    ):  # noqa: E501
-        """RebalanceConfigRequest - a model defined in Swagger
-
-        :param enabled: Whether auto rebalance is enabled.
-        :type enabled: bool
-        :param usdt_ratio: Ratio for USDT side.
-        :type usdt_ratio: float
-        :param coin_ratio: Ratio for coin side.
-        :type coin_ratio: float
-        :param usdt_threshold: Threshold for USDT rebalance trigger.
-        :type usdt_threshold: float
-        :param coin_threshold: Threshold for coin rebalance trigger.
-        :type coin_threshold: float
-        """
+        coin_threshold: float = None,
+        primary: RebalanceSide = None,
+        secondary: RebalanceSide = None,
+        trend_threshold: float = None
+    ):
 
         self.swagger_types = {
             'enabled': bool,
@@ -39,6 +67,9 @@ class RebalanceConfigRequest(Model):
             'coin_ratio': float,
             'usdt_threshold': float,
             'coin_threshold': float,
+            'primary': RebalanceSide,
+            'secondary': RebalanceSide,
+            'trend_threshold': float,
         }
 
         self.attribute_map = {
@@ -47,56 +78,88 @@ class RebalanceConfigRequest(Model):
             'coin_ratio': 'coin_ratio',
             'usdt_threshold': 'usdt_threshold',
             'coin_threshold': 'coin_threshold',
+            'primary': 'primary',
+            'secondary': 'secondary',
+            'trend_threshold': 'trend_threshold',
         }
 
         self._enabled = enabled
-        self._rebalance_usdt_ratio = usdt_ratio
-        self._rebalance_coin_ratio = coin_ratio
-        self._rebalance_usdt_threshold = usdt_threshold
-        self._rebalance_coin_threshold = coin_threshold
+        self._usdt_ratio = usdt_ratio
+        self._coin_ratio = coin_ratio
+        self._usdt_threshold = usdt_threshold
+        self._coin_threshold = coin_threshold
+        self._primary = primary
+        self._secondary = secondary
+        self._trend_threshold = trend_threshold
 
     @classmethod
     def from_dict(cls, dikt) -> 'RebalanceConfigRequest':
-        """Returns the dict as a model"""
         return util.deserialize_model(dikt, cls)
 
-    # ---- Property definitions ----
+    # -------------------------
+    # Properties
+    # -------------------------
+
     @property
-    def enabled(self) -> bool:
+    def enabled(self):
         return self._enabled
 
     @enabled.setter
-    def enabled(self, enabled: bool):
-        self._enabled = enabled
+    def enabled(self, value):
+        self._enabled = value
 
     @property
-    def usdt_ratio(self) -> float:
-        return self._rebalance_usdt_ratio
+    def usdt_ratio(self):
+        return self._usdt_ratio
 
     @usdt_ratio.setter
-    def usdt_ratio(self, value: float):
-        self._rebalance_usdt_ratio = value
+    def usdt_ratio(self, value):
+        self._usdt_ratio = value
 
     @property
-    def coin_ratio(self) -> float:
-        return self._rebalance_coin_ratio
+    def coin_ratio(self):
+        return self._coin_ratio
 
     @coin_ratio.setter
-    def coin_ratio(self, value: float):
-        self._rebalance_coin_ratio = value
+    def coin_ratio(self, value):
+        self._coin_ratio = value
 
     @property
-    def usdt_threshold(self) -> float:
-        return self._rebalance_usdt_threshold
+    def usdt_threshold(self):
+        return self._usdt_threshold
 
     @usdt_threshold.setter
-    def usdt_threshold(self, value: float):
-        self._rebalance_usdt_threshold = value
+    def usdt_threshold(self, value):
+        self._usdt_threshold = value
 
     @property
-    def coin_threshold(self) -> float:
-        return self._rebalance_coin_threshold
+    def coin_threshold(self):
+        return self._coin_threshold
 
     @coin_threshold.setter
-    def coin_threshold(self, value: float):
-        self._rebalance_coin_threshold = value
+    def coin_threshold(self, value):
+        self._coin_threshold = value
+
+    @property
+    def primary(self):
+        return self._primary
+
+    @primary.setter
+    def primary(self, value):
+        self._primary = value
+
+    @property
+    def secondary(self):
+        return self._secondary
+
+    @secondary.setter
+    def secondary(self, value):
+        self._secondary = value
+
+    @property
+    def trend_threshold(self):
+        return self._trend_threshold
+
+    @trend_threshold.setter
+    def trend_threshold(self, value):
+        self._trend_threshold = value
